Fixed spacing issue in member details

--- a/app/styles/layouts/members.css
+++ b/app/styles/layouts/members.css
@@ -708,6 +708,10 @@ label[for="member-description"] + p {
     align-items: center;
 }
 
+.gh-member-details-meta .gh-member-last-seen {
+    margin-top: -1px;
+}
+
 .gh-member-details-meta svg {
     width: 1.6rem;
     height: 1.6rem;
